fix: исправить pom файл